[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/hud/QuitButton.gd" type="Script" id=1]
[ext_resource path="res://ui/hud/PanelContainer.gd" type="Script" id=2]
[ext_resource path="res://ui/hud/HUDSandbox.gd" type="Script" id=3]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=4]
[ext_resource path="res://ui/hud/SpellsList.gd" type="Script" id=5]
[ext_resource path="res://ui/hud/HamburgerPanel.gd" type="Script" id=6]
[ext_resource path="res://ui/hud/HamburgerButton.gd" type="Script" id=7]

[node name="HUDSandbox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.265747
margin_top = -0.484589
margin_right = -0.265747
margin_bottom = -0.484619
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HamburgerContainer" type="HBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 147.0
size_flags_horizontal = 0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HamburgerPanel" type="PanelContainer" parent="HamburgerContainer"]
visible = false
margin_right = 212.0
margin_bottom = 540.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )

[node name="HamburgerList" type="VBoxContainer" parent="HamburgerContainer/HamburgerPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 205.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="HamburgerContainer/HamburgerPanel/HamburgerList"]
margin_right = 198.0
margin_bottom = 59.0
size_flags_horizontal = 4
size_flags_vertical = 2
text = "Quittar bruto"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="HamburgerContainer"]
margin_right = 42.0
margin_bottom = 73.0
size_flags_vertical = 0

[node name="HamburgerButton" type="Button" parent="HamburgerContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 35.0
margin_bottom = 66.0
size_flags_horizontal = 8
size_flags_vertical = 0
text = ">"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -37.5
margin_right = 37.5
margin_bottom = 34.0
grow_horizontal = 0
size_flags_horizontal = 4
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedSpell" type="Label" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 122.0
margin_bottom = 60.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Magia 0"
align = 1
valign = 1
__meta__ = {
"_editor_description_": ""
}

[node name="SpellPanel" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="SpellPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 281.0
margin_bottom = 803.0

[node name="Label" type="Label" parent="SpellPanel/VBoxContainer"]
margin_right = 274.0
margin_bottom = 53.0
text = "Feitiços disponíveis"

[node name="ScrollContainer" type="ScrollContainer" parent="SpellPanel/VBoxContainer"]
margin_top = 57.0
margin_right = 274.0
margin_bottom = 796.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false

[node name="SpellsList" type="VBoxContainer" parent="SpellPanel/VBoxContainer/ScrollContainer"]
margin_right = 274.0
grow_horizontal = 0
size_flags_horizontal = 3
alignment = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HamburgerContainer/HamburgerPanel/HamburgerList/QuitButton" to="HamburgerContainer/HamburgerPanel/HamburgerList/QuitButton" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="HamburgerContainer/PanelContainer/HamburgerButton" to="HamburgerContainer/HamburgerPanel" method="_on_HamburgerButton_pressed"]
[connection signal="pressed" from="HamburgerContainer/PanelContainer/HamburgerButton" to="HamburgerContainer/PanelContainer/HamburgerButton" method="_on_HamburgerButton_pressed"]
[connection signal="toggled" from="HamburgerContainer/PanelContainer/HamburgerButton" to="HamburgerContainer/HamburgerPanel" method="_on_HamburgerButton_toggled"]
[connection signal="toggled" from="HamburgerContainer/PanelContainer/HamburgerButton" to="HamburgerContainer/PanelContainer/HamburgerButton" method="_on_HamburgerButton_toggled"]
[connection signal="spell_renamed" from="SpellPanel/VBoxContainer/ScrollContainer/SpellsList" to="PanelContainer" method="_on_spell_selected"]
[connection signal="spell_selected" from="SpellPanel/VBoxContainer/ScrollContainer/SpellsList" to="PanelContainer" method="_on_spell_selected"]
[connection signal="spell_unselected" from="SpellPanel/VBoxContainer/ScrollContainer/SpellsList" to="PanelContainer" method="_on_spell_unselected"]
